--- a/Cython tests/ising.html
+++ b/Cython tests/ising.html
@@ -2656,7 +2656,7 @@ static PyObject *__pyx_pw_5ising_4Grid_21temperature_tests(PyObject *__pyx_self,
   int __pyx_v_data_points;
   int __pyx_v_sweeps;
   int __pyx_v_tests;
-  CYTHON_UNUSED int __pyx_v_sweeps_per_test;
+  int __pyx_v_sweeps_per_test;
   PyObject *__pyx_v_eng = 0;
   PyObject *__pyx_v_mag = 0;
   PyObject *__pyx_v_save = 0;
@@ -2672,7 +2672,7 @@ static PyObject *__pyx_pw_5ising_4Grid_21temperature_tests(PyObject *__pyx_self,
   return __pyx_r;
 }
 
-static PyObject *__pyx_pf_5ising_4Grid_20temperature_tests(CYTHON_UNUSED PyObject *__pyx_self, PyObject *__pyx_v_self, float __pyx_v_t_min, float __pyx_v_t_max, int __pyx_v_data_points, int __pyx_v_sweeps, int __pyx_v_tests, CYTHON_UNUSED int __pyx_v_sweeps_per_test, PyObject *__pyx_v_eng, PyObject *__pyx_v_mag, PyObject *__pyx_v_save) {
+static PyObject *__pyx_pf_5ising_4Grid_20temperature_tests(CYTHON_UNUSED PyObject *__pyx_self, PyObject *__pyx_v_self, float __pyx_v_t_min, float __pyx_v_t_max, int __pyx_v_data_points, int __pyx_v_sweeps, int __pyx_v_tests, int __pyx_v_sweeps_per_test, PyObject *__pyx_v_eng, PyObject *__pyx_v_mag, PyObject *__pyx_v_save) {
   __Pyx_memviewslice __pyx_v_temperature = { 0, 0, { 0 }, { 0 }, { 0 } };
   __Pyx_memviewslice __pyx_v_magnetisation = { 0, 0, { 0 }, { 0 }, { 0 } };
   __Pyx_memviewslice __pyx_v_energy = { 0, 0, { 0 }, { 0 }, { 0 } };
@@ -3186,21 +3186,24 @@ static PyObject *__pyx_pf_5ising_4Grid_20temperature_tests(CYTHON_UNUSED PyObjec
     __pyx_t_16 = __pyx_t_15;
     for (__pyx_t_17 = 0; __pyx_t_17 &lt; __pyx_t_16; __pyx_t_17+=1) {
       __pyx_v_j = __pyx_t_17;
-</pre><pre class="cython line score-17" onclick="(function(s){s.display=s.display==='block'?'none':'block'})(this.nextElementSibling.style)">+<span class="">146</span>:                 <span class="bp">self</span><span class="o">.</span><span class="n">update_sweep</span><span class="p">(</span><span class="mf">10</span><span class="p">)</span></pre>
-<pre class='cython code score-17 '>      __pyx_t_4 = <span class='pyx_c_api'>__Pyx_PyObject_GetAttrStr</span>(__pyx_v_self, __pyx_n_s_update_sweep);<span class='error_goto'> if (unlikely(!__pyx_t_4)) __PYX_ERR(0, 146, __pyx_L1_error)</span>
+</pre><pre class="cython line score-20" onclick="(function(s){s.display=s.display==='block'?'none':'block'})(this.nextElementSibling.style)">+<span class="">146</span>:                 <span class="bp">self</span><span class="o">.</span><span class="n">update_sweep</span><span class="p">(</span><span class="n">sweeps_per_test</span><span class="p">)</span></pre>
+<pre class='cython code score-20 '>      __pyx_t_4 = <span class='pyx_c_api'>__Pyx_PyObject_GetAttrStr</span>(__pyx_v_self, __pyx_n_s_update_sweep);<span class='error_goto'> if (unlikely(!__pyx_t_4)) __PYX_ERR(0, 146, __pyx_L1_error)</span>
       <span class='refnanny'>__Pyx_GOTREF</span>(__pyx_t_4);
-      __pyx_t_5 = NULL;
+      __pyx_t_5 = <span class='pyx_c_api'>__Pyx_PyInt_From_int</span>(__pyx_v_sweeps_per_test);<span class='error_goto'> if (unlikely(!__pyx_t_5)) __PYX_ERR(0, 146, __pyx_L1_error)</span>
+      <span class='refnanny'>__Pyx_GOTREF</span>(__pyx_t_5);
+      __pyx_t_3 = NULL;
       if (CYTHON_UNPACK_METHODS &amp;&amp; likely(<span class='py_c_api'>PyMethod_Check</span>(__pyx_t_4))) {
-        __pyx_t_5 = <span class='py_macro_api'>PyMethod_GET_SELF</span>(__pyx_t_4);
-        if (likely(__pyx_t_5)) {
+        __pyx_t_3 = <span class='py_macro_api'>PyMethod_GET_SELF</span>(__pyx_t_4);
+        if (likely(__pyx_t_3)) {
           PyObject* function = <span class='py_macro_api'>PyMethod_GET_FUNCTION</span>(__pyx_t_4);
-          <span class='pyx_macro_api'>__Pyx_INCREF</span>(__pyx_t_5);
+          <span class='pyx_macro_api'>__Pyx_INCREF</span>(__pyx_t_3);
           <span class='pyx_macro_api'>__Pyx_INCREF</span>(function);
           <span class='pyx_macro_api'>__Pyx_DECREF_SET</span>(__pyx_t_4, function);
         }
       }
-      __pyx_t_1 = (__pyx_t_5) ? __Pyx_PyObject_Call2Args(__pyx_t_4, __pyx_t_5, __pyx_int_10) : <span class='pyx_c_api'>__Pyx_PyObject_CallOneArg</span>(__pyx_t_4, __pyx_int_10);
-      <span class='pyx_macro_api'>__Pyx_XDECREF</span>(__pyx_t_5); __pyx_t_5 = 0;
+      __pyx_t_1 = (__pyx_t_3) ? __Pyx_PyObject_Call2Args(__pyx_t_4, __pyx_t_3, __pyx_t_5) : <span class='pyx_c_api'>__Pyx_PyObject_CallOneArg</span>(__pyx_t_4, __pyx_t_5);
+      <span class='pyx_macro_api'>__Pyx_XDECREF</span>(__pyx_t_3); __pyx_t_3 = 0;
+      <span class='pyx_macro_api'>__Pyx_DECREF</span>(__pyx_t_5); __pyx_t_5 = 0;
       if (unlikely(!__pyx_t_1)) <span class='error_goto'>__PYX_ERR(0, 146, __pyx_L1_error)</span>
       <span class='refnanny'>__Pyx_GOTREF</span>(__pyx_t_1);
       <span class='pyx_macro_api'>__Pyx_DECREF</span>(__pyx_t_4); __pyx_t_4 = 0;
