kaw possibly still wrong with nn as bumpy plot

--- a/Cython tests/ising.html
+++ b/Cython tests/ising.html
@@ -2753,10 +2753,10 @@ static PyObject *__pyx_pf_5ising_4Grid_20temperature_tests(CYTHON_UNUSED PyObjec
   if (<span class='pyx_c_api'>__Pyx_SetNameInClass</span>(__pyx_t_1, __pyx_n_s_temperature_tests, __pyx_t_7) &lt; 0) <span class='error_goto'>__PYX_ERR(0, 132, __pyx_L1_error)</span>
   <span class='pyx_macro_api'>__Pyx_DECREF</span>(__pyx_t_7); __pyx_t_7 = 0;
   __pyx_codeobj__41 = (PyObject*)<span class='pyx_c_api'>__Pyx_PyCode_New</span>(10, 0, 15, 0, CO_OPTIMIZED|CO_NEWLOCALS, __pyx_empty_bytes, __pyx_empty_tuple, __pyx_empty_tuple, __pyx_tuple__40, __pyx_empty_tuple, __pyx_empty_tuple, __pyx_kp_s_ising_pyx, __pyx_n_s_temperature_tests, 132, __pyx_empty_bytes);<span class='error_goto'> if (unlikely(!__pyx_codeobj__41)) __PYX_ERR(0, 132, __pyx_L1_error)</span>
-</pre><pre class="cython line score-6" onclick="(function(s){s.display=s.display==='block'?'none':'block'})(this.nextElementSibling.style)">+<span class="">133</span>:                         <span class="nb">int</span> <span class="n">sweeps</span><span class="o">=</span><span class="mf">100</span><span class="p">,</span> <span class="nb">int</span> <span class="n">tests</span><span class="o">=</span><span class="mf">1000</span><span class="p">,</span> <span class="nb">int</span> <span class="n">sweeps_per_test</span><span class="o">=</span><span class="mf">10</span><span class="p">,</span></pre>
+</pre><pre class="cython line score-6" onclick="(function(s){s.display=s.display==='block'?'none':'block'})(this.nextElementSibling.style)">+<span class="">133</span>:                         <span class="nb">int</span> <span class="n">sweeps</span><span class="o">=</span><span class="mf">100</span><span class="p">,</span> <span class="nb">int</span> <span class="n">tests</span><span class="o">=</span><span class="mf">10000</span><span class="p">,</span> <span class="nb">int</span> <span class="n">sweeps_per_test</span><span class="o">=</span><span class="mf">10</span><span class="p">,</span></pre>
 <pre class='cython code score-6 '>  __pyx_t_5 = <span class='pyx_c_api'>__Pyx_PyInt_From_int</span>(((int)0x64));<span class='error_goto'> if (unlikely(!__pyx_t_5)) __PYX_ERR(0, 133, __pyx_L1_error)</span>
   <span class='refnanny'>__Pyx_GOTREF</span>(__pyx_t_5);
-  __pyx_t_6 = <span class='pyx_c_api'>__Pyx_PyInt_From_int</span>(((int)0x3E8));<span class='error_goto'> if (unlikely(!__pyx_t_6)) __PYX_ERR(0, 133, __pyx_L1_error)</span>
+  __pyx_t_6 = <span class='pyx_c_api'>__Pyx_PyInt_From_int</span>(((int)0x2710));<span class='error_goto'> if (unlikely(!__pyx_t_6)) __PYX_ERR(0, 133, __pyx_L1_error)</span>
   <span class='refnanny'>__Pyx_GOTREF</span>(__pyx_t_6);
   __pyx_t_7 = <span class='pyx_c_api'>__Pyx_PyInt_From_int</span>(((int)10));<span class='error_goto'> if (unlikely(!__pyx_t_7)) __PYX_ERR(0, 133, __pyx_L1_error)</span>
   <span class='refnanny'>__Pyx_GOTREF</span>(__pyx_t_7);
@@ -2903,7 +2903,7 @@ static PyObject *__pyx_pf_5ising_4Grid_20temperature_tests(CYTHON_UNUSED PyObjec
     if (values[5]) {
       __pyx_v_tests = <span class='pyx_c_api'>__Pyx_PyInt_As_int</span>(values[5]); if (unlikely((__pyx_v_tests == (int)-1) &amp;&amp; <span class='py_c_api'>PyErr_Occurred</span>())) <span class='error_goto'>__PYX_ERR(0, 133, __pyx_L3_error)</span>
     } else {
-      __pyx_v_tests = ((int)((int)0x3E8));
+      __pyx_v_tests = ((int)((int)0x2710));
     }
     if (values[6]) {
       __pyx_v_sweeps_per_test = <span class='pyx_c_api'>__Pyx_PyInt_As_int</span>(values[6]); if (unlikely((__pyx_v_sweeps_per_test == (int)-1) &amp;&amp; <span class='py_c_api'>PyErr_Occurred</span>())) <span class='error_goto'>__PYX_ERR(0, 133, __pyx_L3_error)</span>
